--- a/index.html
+++ b/index.html
@@ -1,7 +1,203 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
+  <title>MY Portofolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" />
+  <link rel="stylesheet" href="css/style.min.css" />
+</head>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons|Pacifico|Montserrat|Gugi" rel="stylesheet">
 
 <body>
-  <h3>HELLO</h3>
+  <style>
+    .navbar-fixed {
+      position: absolute;
+      z-index: 999999999
+    }
+  </style>
+  <div class="navbar-fixed mt-20">
+    <nav class="transparent z-depth-0">
+      <div class="nav-wrapper">
+        <div class="row">
+          <div class="col s12"> <a href="javascript:void(0)" class="brand-logo ml md-screen" target="_blank" style="font-family: 'Pacifico'">Sukri Yanto</a>
+            <ul class="right hide-on-med-and-down mr" style="font-family: 'Montserrat'">
+              <li class="nav-button"><a href="#skills">SKILL</a></li>
+              <li class="nav-button"><a href="#portofolio">PORTOFOLIO</a></li>
+              <li class="nav-button"><a href="#about">ABOUT</a></li>
+              <li class="nav-button"><a href="#doc">DOCUMENT</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <div class="main title">
+    <div style="font-family: 'Montserrat';">
+      <h3>Welcome To My Portofolio</h3>
+      <div class="row">
+        <div class="col s3"></div>
+        <div class="col s6">
+          <h6>
+            I'm a software engineer eager to learn new things and how the best practice to implement it. I have experience working as a software engineer 3 years, I've been work to help manage company operation and manage application
+            <br>
+            <br>
+            When I'm not on the job, I like takes the challenge to create a new application with a new language or a new method that new to me
+          </h6>
+        </div>
+        <div class="col s3"></div>
+      </div>
+    </div><a href="#skills" class="waves-effect waves-light z-depth-2 btn-large yellow darken-1" style="font-weight: 700;">TELL ME MORE</a>
+  </div><img class="img" src="banner.jpg">
+  <div class="center" style="margin-top:40px;">
+    <h2 style="margin-bottom: 0.7em;font-family: Gugi;">SKILLS</h2>
+    <div class="center">
+      <div id="skills" class="section scrollspy">
+        <ul class="ulj">
+          <li class="lij">PHP <span class="center"></span></li>
+          <div class="box">
+            <div id="four"></div>
+          </div>
+          <li class="lij">CSS</li>
+          <div class="box">
+            <div id="two"></div>
+          </div>
+          <li class="lij">Javascript</li>
+          <div class="box">
+            <div id="four"></div>
+          </div>
+          <li class="lij">CODE IGNITER</li>
+          <div class="box">
+            <div id="four"></div>
+          </div>
+          <li class="lij">LARAVEL</li>
+          <div class="box">
+            <div id="four"></div>
+          </div>
+          <li class="lij">SQL</li>
+          <div class="box">
+            <div id="six"></div>
+          </div>
+          <li class="lij">Java</li>
+          <div class="box">
+            <div id="five"></div>
+          </div>
+          <li class="lij">Kotlin</li>
+          <div class="box">
+            <div id="five"></div>
+          </div>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="center portofolio" id="portofolio" class="section scrollspy">
+    <h2 class="center" style="margin-bottom:100px;font-family: Gugi;"><br>PORTOFOLIO</h2>
+    <div class="container row " id="project">
+      <div class="col s12 m4">
+        <div class="card z-depth-3">
+          <div class="card-image"> <img src="img/hospital.svg" class="img-portofolio"> <span class="card-title"></span></div>
+          <div class="card-content">
+            <p>Application handle cooperative Savings and Loans </p>
+          </div>
+          <div class="card-action"> <a href="https://github.com/sukriy/kotlin-apk">Repository</a></div>
+        </div>
+      </div>
+      <div class="col s12 m4 ">
+        <div class="card z-depth-3">
+          <div class="card-image"> <img src="img/elections.svg" class="img-portofolio"> <span class="card-title"></span></div>
+          <div class="card-content">
+            <p>Application IOT handles waiting list restaurant shabu-shabu</p>
+          </div>
+          <div class="card-action"> <a href="https://github.com/sukriy/android_app1">Repository</a></div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card z-depth-3">
+          <div class="card-image"> <img src="img/books.svg" class="img-portofolio"> <span class="card-title"></span></div>
+          <div class="card-content">
+            <p>Application IOT handle Parking</p>
+          </div>
+          <div class="card-action"> <a href="https://github.com/sukriy/Monitoring-Parkir">Repository</a></div>
+        </div>
+      </div>
+      <div class="col s12 m4">
+        <div class="card z-depth-3">
+          <div class="card-image"> <img src="img/warehouse.svg" class="img-portofolio"> <span class="card-title"></span></div>
+          <div class="card-content">
+            <p>Application that handles buying and selling shops</p>
+          </div>
+          <div class="card-action"> <a href="#">Repository</a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="center mt-20" class="section scrollspy">
+    <h3 style="font-family: Gugi;">ABOUT</h3>
+  </div>
+  <div class="container">
+    <div class="timeline">
+      <div class="timeline-event">
+        <div class="card timeline-content">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="img/programming.svg" style="width: 50%;margin:20px auto;"></div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4 center">2014 - 2018</span>
+            <p>Working as IT Staff at Kirana Pacifik Luask</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Job Description<i class="material-icons right">close</i></span>
+            <p>
+              <ol>
+                <li>Handle troubleshooting hardware and network</li>
+                <li>Handle development and maintenance website using PHP, Sql Server</li>
+              </ol>
+            </p>
+          </div>
+        </div>
+        <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
+      </div>
+      <div class="timeline-event">
+        <div class="card timeline-content">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="img/graduation.svg" style="width: 50%;margin:20px auto;"></div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4">2014-2018</span>
+            <p>I'am graduated from Esa Unggul University in Jakarta, majoring in computer science</p>
+          </div>
+        </div>
+        <div class="timeline-badge blue white-text"><i class="material-icons">book</i></div>
+      </div>
+      <div class="timeline-event">
+        <div class="card timeline-content">
+          <div class="card-image waves-effect waves-block waves-light"> <img class="activator" src="img/programming.svg" style="width: 50%;margin:20px auto;"></div>
+          <div class="card-content"> <span class="card-title activator grey-text text-darken-4 center">2019 - NOW</span>
+            <p>Working as Software Engineer at Five Jack</p>
+          </div>
+          <div class="card-reveal"> <span class="card-title grey-text text-darken-4">Job Description<i class="material-icons right">close</i></span>
+            <p>
+              <ol>
+                <li>Handle development and maintenance website using PHP, MySql</li>
+                <li>Handle development and maintenance android using React Native, Javascript</li>
+              </ol>
+            </p>
+          </div>
+        </div>
+        <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
+      </div>
+    </div>
+  </div> <br> <Br>
+  <div class="container">
+    <div class="row center" id="doc">
+      <div class="col s3"></div>
+      <div class="col s6"> <a href="https://drive.google.com/open?id=174zeoSmYufKM10g21hTTLMFCRAc4fPH7" class="btn" style="width: 100%;">CV</a></div>
+      <div class="col s3"></div>
+    </div>
+  </div>
+  <!-- <footer class="page-footer transparent">
+    <div class="footer-copyright blue accent-2">
+      <div class="container"> © 2018 Copyright Joviandro, with love for a better web <a class="grey-text text-lighten-4 right" href="#!"><b id="date">Joviandro@outlook.com</b></a></div>
+    </div>
+  </footer> -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/main.min.js"></script>
+  <!--<script src="https://use.fontawesome.com/2e37f68334.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </body>
 
 </html>
