--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="container row " id="project">
       <div class="col s12 m4">
         <div class="card z-depth-3">
-          <div class="card-image"> <img src="img/hospital.svg" class="img-portofolio"> <span class="card-title"></span></div>
+          <div class="card-image"> <img src="img/cooperation.svg" class="img-portofolio"> <span class="card-title"></span></div>
           <div class="card-content">
             <p>Application handle cooperative Savings and Loans </p>
           </div>
@@ -105,18 +105,18 @@
       </div>
       <div class="col s12 m4 ">
         <div class="card z-depth-3">
-          <div class="card-image"> <img src="img/elections.svg" class="img-portofolio"> <span class="card-title"></span></div>
+          <div class="card-image"> <img src="img/restaurant.svg" class="img-portofolio"> <span class="card-title"></span></div>
           <div class="card-content">
-            <p>Application IOT handles waiting list restaurant shabu-shabu</p>
+            <p>Application IoT handles waiting list restaurant shabu-shabu</p>
           </div>
           <div class="card-action"> <a href="https://github.com/sukriy/android_app1">Repository</a></div>
         </div>
       </div>
       <div class="col s12 m4">
         <div class="card z-depth-3">
-          <div class="card-image"> <img src="img/books.svg" class="img-portofolio"> <span class="card-title"></span></div>
+          <div class="card-image"> <img src="img/parking.svg" class="img-portofolio"> <span class="card-title"></span></div>
           <div class="card-content">
-            <p>Application IOT handle Parking</p>
+            <p>Application IoT handles Parking Monitoring</p>
           </div>
           <div class="card-action"> <a href="https://github.com/sukriy/Monitoring-Parkir">Repository</a></div>
         </div>
@@ -125,9 +125,9 @@
         <div class="card z-depth-3">
           <div class="card-image"> <img src="img/warehouse.svg" class="img-portofolio"> <span class="card-title"></span></div>
           <div class="card-content">
-            <p>Application that handles buying and selling shops</p>
+            <p>Application handles buying and selling shops</p>
           </div>
-          <div class="card-action"> <a href="#">Repository</a></div>
+          <div class="card-action"> <a href="https://github.com/sukriy/store-transaction">Repository</a></div>
         </div>
       </div>
     </div>
